add keylogger section

--- a/exams/18_19/sections/other/exercise_3.tex
+++ b/exams/18_19/sections/other/exercise_3.tex
@@ -10,9 +10,8 @@
 \hline
 31 & 30 & 29 & 28 & 27 & 26 & 25 & 24 & 23 & 22 & 21 & 20 & 19 & 18 & 17 & 16 & 15 & 14 & 13 & 12 & 11 & 10 & 9 & 8 & 7 & 6 & 5 & 4 & 3 & 2 & 1 & 0\\
 \hline
-\texttt{VZ} & \multicolumn{8}{|c|}{\texttt{Exponent + 0x7F}} & \multicolumn{23}{|c|}{\texttt{Mantisse ohne "Hiden Bit"}}\\
+\texttt{BZ} & \multicolumn{8}{|c|}{\texttt{Exponent + 0x7F}} & \multicolumn{23}{|c|}{\texttt{Mantisse ohne "Hiden Bit"}}\\
 \hline
-\multicolumn{5}{l}{\texttt{VZ = 0}: positiv, \texttt{VZ = 1}: negativ}
 \end{tabular}}
 \end{table}
 
