--- a/exams/18_19/sections/exercise_3.tex
+++ b/exams/18_19/sections/exercise_3.tex
@@ -1,4 +1,4 @@
-\section*{Aufgabe 2 (10 Punkte)}
+\section*{Aufgabe 3 (10 Punkte)}
 
 In einem 32-bit Wort $w$ sind drei Bitfelder $a$, $b$ und $c$ folgendermaßen definiert:
 
@@ -15,7 +15,8 @@ x & x & $a_6$ & $a_5$ & $a_4$ & $a_3$ & $a_2$ & $a_1$ & $a_0$ & x & x & x & x & 
 
 \begin{enumerate}[label={a)}, leftmargin=*]
 \item Geben Sie die Wertebereiche (dezimal) für ganze Zahlen an, die in $a$, $b$, $c$  i) vorzeichenlos und ii) als Zweierkomplemente dargestellt werden können!
-\item[b)] In Hexadezimaldarstellung sei $w = \text{E0A86780}$. Geben Sie die Dezimaldarstellung der Zahlen in den Bitfeldern $a$, $b$ und $c$ an, wenn sie i) vorzeichenlos und ii) als Zweierkomplemente interpretiert werden!
-\item[c)] Es soll die Operationen $w \leftarrow (w \oplus m)$ (bitweise exklusives Oder der 32-bit Worte $w$ und $m$) ausgeführt werden. Geben Sie $m$ in Hexadezimaldarstellung an, so dass jedes Bit in den Bitfeldern $a$, $b$ und $c$ invertiert wird und die übrigen Bits unverändert bleiben!
-\item[d)] Geben Sie den Wert des 32-bit Wortes $w$ in Hexadezimaldarstellung an, wenn in den Bitfeldern die Werte $a : 25$, $b : -1$ und $c : -4$ als Zweierkomplemente dargestellt sind und die übrigen Bits den Wert 0 haben!
+\item[b)] In Hexadezimaldarstellung sei $w = \text{\texttt{E0A86780}}$. Geben Sie die Dezimaldarstellung der Zahlen in den Bitfeldern $a$, $b$ und $c$ an, wenn sie i) vorzeichenlos und ii) als Zweierkomplemente interpretiert werden!
+\item[c)] Geben Sie das 32-bit Wort $w$ in Hexadezimaldarstellung an, wenn in den Bitfeldern die Werte $a : 25$, $b : -1$ und $c = -4$ als Zweierkomplemente dargestellt sind und die übrigen Bits 0 sind!
 \end{enumerate}
+
+\newpage
