--- a/exams/18_19/sections/other/exercise_2.tex
+++ b/exams/18_19/sections/other/exercise_2.tex
@@ -14,7 +14,7 @@ x & x & $a_6$ & $a_5$ & $a_4$ & $a_3$ & $a_2$ & $a_1$ & $a_0$ & x & x & x & x & 
 \end{table}
 
 \begin{enumerate}[label={a)}, leftmargin=*]
-\item Geben Sie die Wertebereiche (dezimal) für ganze Zahlen an, die in $a$, $b$, $c$  i) vorzeichenlos und ii) als Zweierkomplemente dargestellt werden können!
+\item Geben Sie die Wertebereiche (dezimal) für ganze Zahlen an, die in $a$, $b$, $c$  i) vorzeichenlos und ii) als Zweierkomplement dargestellt werden können!
 \item[b)] In Hexadezimaldarstellung sei $w = \text{E0A86780}$. Geben Sie die Dezimaldarstellung der Zahlen in den Bitfeldern $a$, $b$ und $c$ an, wenn sie i) vorzeichenlos und ii) als Zweierkomplemente interpretiert werden!
 \item[c)] Es soll die Operationen $w \leftarrow (w \oplus m)$ (bitweise exklusives Oder der 32-bit Worte $w$ und $m$) ausgeführt werden. Geben Sie $m$ in Hexadezimaldarstellung an, so dass jedes Bit in den Bitfeldern $a$, $b$ und $c$ invertiert wird und die übrigen Bits unverändert bleiben!
 \item[d)] Geben Sie den Wert des 32-bit Wortes $w$ in Hexadezimaldarstellung an, wenn in den Bitfeldern die Werte $a : 25$, $b : -1$ und $c : -4$ als Zweierkomplemente dargestellt sind und die übrigen Bits den Wert 0 haben!
